kubernetes/apps/recipes/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: recipes
  labels:
    app.kubernetes.io/name: recipes
    app.kubernetes.io/part-of: recipes
    app.kubernetes.io/managed-by: flux
